Correcao catalogo mobile

--- a/style.css
+++ b/style.css
@@ -1062,9 +1062,10 @@ h6 {
     }
 
     .catalog__title {
-        font-size: 44px;
-        line-height: 1.1;
-        margin-bottom: var(--spacing-lg);
+        font-size: 52px !important;
+        line-height: 1.1 !important;
+        margin-top: 0 !important;
+        margin-bottom: 80px !important;
         max-width: 300px;
         word-spacing: 100vw;
     }
